--- a/eigenfaces.ipynb
+++ b/eigenfaces.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing necessary libraries\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
@@ -20,6 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## defining file paths\n",
+    "\n",
     "train_path = \"./data2/faces/\"\n",
     "test_path = \"./data/unclassified/\""
    ]
@@ -30,6 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## loading files\n",
+    "\n",
     "trainfiles = os.listdir(train_path)\n",
     "trainfiles = [os.path.join(train_path,x) for x in trainfiles]"
    ]
@@ -41,6 +47,10 @@
    "outputs": [],
    "source": [
     "def init_eigenfaces(trainfiles,K):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "        Method to initialize the eigenface system.\n",
+    "    \"\"\"\n",
     "    \n",
     "    ## reading the images and vectorizing them\n",
     "    imgs = []\n",
@@ -84,6 +94,10 @@
    "outputs": [],
    "source": [
     "def show_eigenfaces(u):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "        Method to display the eigenface\n",
+    "    \"\"\"\n",
     "    \n",
     "    imgs = []\n",
     "    for j in range(u.shape[1]):\n",
@@ -146,6 +160,10 @@
    "source": [
     "def reconstruct_img(img,mean_face,u,visualize = False):\n",
     "    \n",
+    "    \"\"\"\n",
+    "        Method to reconstruct face image\n",
+    "    \"\"\"\n",
+    "    \n",
     "    ## vectorize the image\n",
     "    img_ = img.flatten()\n",
     "    img_ = np.expand_dims(img_,axis = 1)\n",
@@ -156,11 +174,7 @@
     "    recon = 0.0\n",
     "    for j in range(K):\n",
     "    \n",
-    "#         wj = np.matmul(u[:,j],img_)\n",
-    "    \n",
     "        wj1 = np.matmul(np.reshape(u[:,j],(u[:,j].size,1)).T,np.reshape(img_,(img_.size,1)))\n",
-    "#         wj2 = np.sum(np.reshape(u[:,j],(u[:,j].size,1))*img_)\n",
-    "#         wj = np.sum(np.dot(u[:,j].T,img_))\n",
     "        recon = recon + wj1*u[:,j]\n",
     "    \n",
     "    recon = np.reshape(recon,(128,128))\n",
@@ -494,6 +508,8 @@
     }
    ],
    "source": [
+    "## compare face detection, SSIM also displayed\n",
+    "\n",
     "for file in testfiles:\n",
     "    \n",
     "    thresh = 0.26\n",
@@ -516,6 +532,10 @@
    "source": [
     "def face_recog(unk_img,trainfiles,u):\n",
     "\n",
+    "    \"\"\"\n",
+    "        Method to perform face recognition\n",
+    "    \"\"\"\n",
+    "    \n",
     "    unk_img = unk_img.flatten()\n",
     "    unk_img = unk_img.reshape(unk_img.size,1)\n",
     "    \n",
